[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/parts/PartEquipableEditor.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="EquipableEditor" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.5
margin_top = -293.5
margin_right = 315.5
margin_bottom = 70.5
rect_min_size = Vector2( 0, 370 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 647.0
margin_bottom = 391.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="MarginContainer" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 14.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 5

[node name="Label" type="Label" parent="VBoxContainer/Title"]
margin_left = 5.0
margin_right = 640.0
margin_bottom = 14.0
text = "Editor de items"
valign = 1

[node name="Separator1" type="HSeparator" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 640.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 10 )
size_flags_vertical = 7

[node name="Contents" type="MarginContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 640.0
margin_bottom = 336.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Contents"]
margin_left = 5.0
margin_top = 5.0
margin_right = 635.0
margin_bottom = 299.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Box1" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_right = 630.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box1"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Nombre:"
align = 2
valign = 1

[node name="InputName" type="LineEdit" parent="VBoxContainer/Contents/VBoxContainer/Box1"]
margin_left = 130.0
margin_right = 630.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box2" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 34.0
margin_right = 630.0
margin_bottom = 134.0
custom_constants/separation = 10

[node name="Label2" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box2"]
margin_right = 120.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Descripcion:"
align = 2
valign = 1

[node name="InputDescription" type="TextEdit" parent="VBoxContainer/Contents/VBoxContainer/Box2"]
margin_left = 130.0
margin_right = 630.0
margin_bottom = 100.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 10
smooth_scrolling = true

[node name="Box3" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 144.0
margin_right = 630.0
margin_bottom = 168.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box3"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Clase:"
align = 2
valign = 1

[node name="InputClass" type="LineEdit" parent="VBoxContainer/Contents/VBoxContainer/Box3"]
margin_left = 130.0
margin_right = 630.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SectionBonuses" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 178.0
margin_right = 630.0
margin_bottom = 192.0

[node name="Separator" type="HSeparator" parent="VBoxContainer/Contents/VBoxContainer/SectionBonuses"]
margin_right = 283.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Contents/VBoxContainer/SectionBonuses"]
margin_left = 287.0
margin_right = 342.0
margin_bottom = 14.0
text = "Bonuses"

[node name="Separator2" type="HSeparator" parent="VBoxContainer/Contents/VBoxContainer/SectionBonuses"]
margin_left = 346.0
margin_right = 630.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Box5" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 202.0
margin_right = 630.0
margin_bottom = 226.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box5"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 3
text = "Slot:"
align = 2
valign = 1

[node name="InputSlotType" type="OptionButton" parent="VBoxContainer/Contents/VBoxContainer/Box5"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Torso"
align = 1
items = [ "Torso", null, false, 0, null, "Cabeza", null, false, 1, null, "Manos", null, false, 2, null, "Pies", null, false, 3, null, "Cuello", null, false, 4, null, "Anillo", null, false, 5, null, "Otro", null, false, 6, null ]
selected = 0

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/Contents/VBoxContainer/Box5"]
margin_left = 248.0
margin_right = 395.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="Label3" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box5"]
margin_left = 399.0
margin_right = 546.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cantidad de sockets:"
align = 2
valign = 1

[node name="InputSockets" type="SpinBox" parent="VBoxContainer/Contents/VBoxContainer/Box5"]
margin_left = 550.0
margin_right = 630.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
rounded = true
align = 1

[node name="Box6" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 236.0
margin_right = 630.0
margin_bottom = 260.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 3
text = "Resistencia Física:"
align = 2
valign = 1

[node name="InputPR" type="SpinBox" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_left = 124.0
margin_right = 204.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
rounded = true
align = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_left = 208.0
margin_right = 417.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="Label2" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_left = 421.0
margin_right = 546.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 3
text = "Resistencia Mágica:"
align = 2
valign = 1

[node name="InputMR" type="SpinBox" parent="VBoxContainer/Contents/VBoxContainer/Box6"]
margin_left = 550.0
margin_right = 630.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
rounded = true
align = 1

[node name="Box7" type="HBoxContainer" parent="VBoxContainer/Contents/VBoxContainer"]
margin_top = 270.0
margin_right = 630.0
margin_bottom = 294.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box7"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 3
text = "Bonus Reflejos:"
align = 2
valign = 1

[node name="InputReflex" type="SpinBox" parent="VBoxContainer/Contents/VBoxContainer/Box7"]
margin_left = 124.0
margin_right = 204.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
rounded = true
align = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Contents/VBoxContainer/Box7"]
margin_left = 208.0
margin_right = 422.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="Label2" type="Label" parent="VBoxContainer/Contents/VBoxContainer/Box7"]
margin_left = 426.0
margin_right = 546.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_vertical = 3
text = "Bonus Fortaleza"
align = 2
valign = 1

[node name="InputFortaleza" type="SpinBox" parent="VBoxContainer/Contents/VBoxContainer/Box7"]
margin_left = 550.0
margin_right = 630.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
rounded = true
align = 1

[node name="Separator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 340.0
margin_right = 640.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 10 )
size_flags_vertical = 7

[node name="Buttons" type="MarginContainer" parent="VBoxContainer"]
margin_top = 354.0
margin_right = 640.0
margin_bottom = 384.0
size_flags_vertical = 10
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Buttons"]
margin_left = 5.0
margin_top = 5.0
margin_right = 635.0
margin_bottom = 25.0

[node name="ButtonSave" type="Button" parent="VBoxContainer/Buttons/HBoxContainer"]
margin_left = 56.0
margin_right = 256.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 5
text = "Guardar"

[node name="ButtonCancel" type="Button" parent="VBoxContainer/Buttons/HBoxContainer"]
margin_left = 373.0
margin_right = 573.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 5
text = "Cancelar"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="VBoxContainer/Buttons/HBoxContainer/ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/HBoxContainer/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
